# SentinelFlow

./: .env.example  .gitignore  LICENSE  README.md  README_ZH.md  THIRD_PARTY_NOTICES.md  pyproject.toml
examples/plugins/tasks/: daily_soc_summary.yaml  poll_alerts.yaml
runtime/: requirements.txt
runtime/sentinelflow/: __init__.py  cli.py
runtime/sentinelflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
runtime/sentinelflow/agent/: __init__.py  catalog.py  checkpoint_state.py  context_utils.py  graph.py  nodes.py  orchestrator_graph.py  orchestrator_state.py  policy.py  prompt_builder.py  prompts.py  registry.py  schemas.py  service.py  skill_run_analyzer.py  state.py  text_extractor.py  tools.py
runtime/sentinelflow/alerts/: __init__.py  client.py  dedup.py  parser_generator.py  parser_runtime.py  poller.py
runtime/sentinelflow/api/: __init__.py  app.py  deps.py  schemas.py  serve.py  utils.py
runtime/sentinelflow/config/: branding.py  constants.py  runtime.py
runtime/sentinelflow/domain/: __init__.py  enums.py  errors.py  models.py  (+1 more)
runtime/tests/: test_alert_dedup.py  test_alert_poller.py  test_alert_script_client.py  test_auto_execution_service.py  test_dispatch_service.py  test_orchestrator_graph.py  test_runtime_config.py  test_runtime_reliability.py  test_skill_approval_flow.py  test_skill_approval_service.py  test_skill_loader.py  test_skill_loader_approval.py  test_triage_service.py
scripts/: dev.py  serve_webui.py
webui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
webui/src/: App.tsx
(+56 files in other folders)
